--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 futures = "0.3.5"
 md5 = "0.7.0"
 parking_lot = "0.11.0"
+rand = "0.7.3"
 
 [dependencies.tokio]
 version = "0.2.22"
